<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodieX</string>
    <string name="about_description_1">As you should know by now, this is for fun. We have a file explorer :D</string>
    <string name="about_description_2">You can find us in GitHub (tap this text) and help us improve. All the tools and libraries use in this project are free, not all the icons shown in this section are provided from the corresponding project, in some we just take a picture and create an icon to use here :)</string>
    <string name="project_github">https://github.com/CamiloDelReal/project-file-x</string>
    <string name="fonts">Fonts</string>
    <string name="noto_sans">Noto Sans</string>
    <string name="noto_sans_url">https://fonts.google.com/specimen/Noto+Sans</string>
    <string name="colors">Colors</string>
    <string name="material_design_colors_url">https://material.io/resources/color</string>
    <string name="material_design_colors">Material Design Colors</string>
    <string name="icons">Icons</string>
    <string name="material_design_icons_url">https://materialdesignicons.com/</string>
    <string name="material_design_icons">Material Design Icons</string>
    <string name="libraries_and_tools">Libraries and Tools</string>
    <string name="android_jetpack">Android Jetpack</string>
    <string name="android_jetpack_url">https://developer.android.com/jetpack</string>
    <string name="android_kotlin">Android Kotlin</string>
    <string name="android_kotlin_url">https://developer.android.com/kotlin</string>
    <string name="timber">Timber</string>
    <string name="timber_url">https://github.com/JakeWharton/timber</string>
    <string name="dexter">Dexter</string>
    <string name="dexter_url">https://github.com/Karumi/Dexter</string>
    <string name="whatif">WhatIf</string>
    <string name="whatif_url">https://github.com/skydoves/WhatIf</string>
    <string name="toasty">Toasty</string>
    <string name="toasty_url">https://github.com/GrenderG/Toasty</string>
    <string name="application_logo">Application logo</string>
    <string name="title_home">Home</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="empty" translatable="false">"   "</string>
    <string name="title_more_options">More options</string>
    <string name="search_recipes">Search recipes</string>
    <string name="back">Back</string>
    <string name="transition_splash_to_home" translatable="false">transition_splash_to_home</string>
    <string name="transition_home_to_about" translatable="false">transition_home_to_about</string>
    <string name="title_search">Search</string>
    <string name="title_about">About</string>
    <string name="dark_mode">Dark mode</string>
    <string name="service_key">Service key</string>
    <string name="title_service_key">Service key</string>
    <string name="title_search_results">Search results</string>
    <string name="filters">Filters</string>
    <string name="search">Search</string>
    <string name="cuisines">Cuisines</string>
    <string name="meal_types">Meal types</string>
    <string name="main_course">Main course</string>
    <string name="bread">Bread</string>
    <string name="marinade">Marinade</string>
    <string name="breakfast">Breakfast</string>
    <string name="side_dish">Side dish</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="soup">Soup</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="beverage">Beverage</string>
    <string name="drink">Drink</string>
    <string name="salad">Salad</string>
    <string name="sauce">Sauce</string>
    <string name="african">African</string>
    <string name="german">German</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="american">American</string>
    <string name="greek">Greek</string>
    <string name="mexican">Mexican</string>
    <string name="british">British</string>
    <string name="indian">Indian</string>
    <string name="middle_eastern">Middle Eastern</string>
    <string name="cajun">Cajun</string>
    <string name="irish">Irish</string>
    <string name="nordic">Nordic</string>
    <string name="caribbean">Caribbean</string>
    <string name="italian">Italian</string>
    <string name="southern">Southern</string>
    <string name="japanese">Japanese</string>
    <string name="chinese">Chinese</string>
    <string name="spanish">Spanish</string>
    <string name="eastern_european">Eastern European</string>
    <string name="jewish">Jewish</string>
    <string name="thai">Thai</string>
    <string name="european">European</string>
    <string name="korean">Korean</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="french">French</string>
    <string name="latin_american">Latin American</string>
    <string name="check_all_meal_types">Check all meal types</string>
    <string name="uncheck_all_meal_types">Uncheck all meal types</string>
    <string name="check_all_cuisine_types">Check all cuisines</string>
    <string name="uncheck_all_cuisine_types">Uncheck all cuisines</string>
    <string name="check_all_intolerance_types">Check all intolerances</string>
    <string name="uncheck_all_intolerance_types">Uncheck all intolerances</string>
    <string name="check_all_diets_types">Check all diets</string>
    <string name="uncheck_all_diets_types">Uncheck all diets</string>
    <string name="intolerances">Intolerances</string>
    <string name="dairy">Dairy</string>
    <string name="peanut">Peanut</string>
    <string name="soy">Soy</string>
    <string name="egg">Egg</string>
    <string name="seafood">Seafood</string>
    <string name="sulfite">Sulfite</string>
    <string name="gluten">Gluten</string>
    <string name="sesame">Sesame</string>
    <string name="tree_nut">Tree nut</string>
    <string name="grain">Grain</string>
    <string name="shellfish">Shellfish</string>
    <string name="wheat">Wheat</string>
    <string name="diets">Diets</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="nutrition">Nutrition</string>
    <string name="error_requesting_permission">Error requesting permission</string>
    <string name="internet_permission_denied">Internet permission denied</string>
    <string name="loading_recipes">Loading recipes</string>
    <string name="error_loading_recipes_check_internet">Error loading recipes. Please, check your internet connection.</string>
    <string name="error_bookmarking_recipe">Error bookmarking the recipe</string>
    <string name="error_unbookmarking_recipe">Error unbookmarking the recipe</string>
    <string name="internet_not_available_loading_from_cache">Internet connection not detected. Loading from cache.</string>
    <string name="internet_available_loading_from_web">Internet available. Loading from web.</string>
    <string name="no_bookmarks">No bookmarks saved</string>
    <string name="loading_bookmarks">Loading bookmarks</string>
    <string name="history">History</string>
    <string name="popular_drinks">Popular drinks</string>
    <string name="popular_meals">Popular meals</string>
    <string name="loading_board">Loading board</string>
    <string name="error_loading_board_check_internet">Error loading board. Please, check your internet connection</string>
    <string name="quota_reached">Service daily quota has been reached the limit points. Please, configure another service key or wait till tomorrow.</string>
    <string name="close">Close</string>
    <string name="configure">Configure</string>
</resources>