<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.about.AboutFragment">

    <data>

        <variable
            name="version"
            type="java.lang.String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:transitionName="@string/transition_home_to_about">

        <View
            android:id="@+id/v_status_bar_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/v_navigation_bar_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/ml_root"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/v_navigation_bar_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_status_bar_bg"
            app:layoutDescription="@xml/scene_about">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_toolbar"
                android:layout_width="0dp"
                android:layout_height="@dimen/about_toolbar_height_expanded"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="?attr/colorPrimary"
                android:elevation="@dimen/no_elevation">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:elevation="@dimen/on_toolbar_elevation"
                    style="@style/LightRippleButton"
                    android:src="@drawable/ic_arrow_left"
                    app:tint="?attr/colorOnPrimarySurface"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/back" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="@dimen/about_icon_size"
                android:layout_height="@dimen/about_icon_size"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"
                android:elevation="@dimen/on_toolbar_elevation"
                android:contentDescription="@string/application_logo" />

            <TextView
                android:id="@+id/tv_app_name"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/noto_sans_bold"
                android:elevation="@dimen/on_toolbar_elevation"
                android:text="@string/app_name"
                android:textColor="?attr/colorOnPrimarySurface" />

            <TextView
                android:id="@+id/tv_version"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:elevation="@dimen/on_toolbar_elevation"
                android:text="@{version}"
                android:textColor="?attr/colorOnPrimarySurface"
                tools:text="0.1.0" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/ncv_about_content"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_toolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/about_padding">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/btn_about_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/about_item_corner_radius"
                        app:cardElevation="0dp"
                        app:cardUseCompatPadding="false"
                        app:contentPadding="@dimen/about_header_content_padding">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Body1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:justificationMode="inter_word"
                                android:text="@string/about_description_1"
                                tools:targetApi="o" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/about_content_space" />

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Body1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:justificationMode="inter_word"
                                android:text="@string/about_description_2"
                                tools:targetApi="o" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/about_content_space" />

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Caption"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:justificationMode="inter_word"
                                android:text="@string/project_github"
                                tools:targetApi="o" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/about_header_space" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fonts" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha="0.1"
                        android:background="?attr/colorOnSurface" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/about_section_header_space" />

                    <org.xapps.apps.foodiex.views.custom.AboutReference
                        android:id="@+id/btn_link_google_fonts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ar_icon="@drawable/ic_googlefonts"
                        app:ar_link="@string/noto_sans_url"
                        app:ar_text="@string/noto_sans" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/about_section_space" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icons" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha="0.1"
                        android:background="?attr/colorOnSurface" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/about_section_header_space" />

                    <org.xapps.apps.foodiex.views.custom.AboutReference
                        android:id="@+id/btn_link_material_design_icons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ar_icon="@drawable/ic_googlematerialdesign"
                        app:ar_link="@string/material_design_icons_url"
                        app:ar_text="@string/material_design_icons" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/about_section_space" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colors" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha="0.1"
                        android:background="?attr/colorOnSurface" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/about_section_header_space" />

                    <org.xapps.apps.foodiex.views.custom.AboutReference
                        android:id="@+id/btn_link_material_design_colors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ar_icon="@drawable/ic_googlematerialdesign"
                        app:ar_link="@string/material_design_colors_url"
                        app:ar_text="@string/material_design_colors" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/about_section_space" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/libraries_and_tools" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha="0.1"
                        android:background="?attr/colorOnSurface" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/about_section_header_space" />

                    <org.xapps.apps.foodiex.views.custom.AboutReference
                        android:id="@+id/btn_link_android_jetpack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ar_icon="@drawable/ic_androidjetpack"
                        app:ar_link="@string/android_jetpack_url"
                        app:ar_text="@string/android_jetpack" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/about_section_item_space" />

                    <org.xapps.apps.foodiex.views.custom.AboutReference
                        android:id="@+id/btn_link_android_kotlin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ar_icon="@drawable/ic_androidkotlin"
                        app:ar_link="@string/android_kotlin_url"
                        app:ar_text="@string/android_kotlin" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/about_section_item_space" />

                    <org.xapps.apps.foodiex.views.custom.AboutReference
                        android:id="@+id/btn_link_dexter_permissions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ar_icon="@drawable/ic_dexter"
                        app:ar_link="@string/dexter_url"
                        app:ar_text="@string/dexter" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/about_section_item_space" />

                    <org.xapps.apps.foodiex.views.custom.AboutReference
                        android:id="@+id/btnLinkWhatIf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ar_link="@string/whatif_url"
                        app:ar_text="@string/whatif" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/about_section_item_space" />

                    <org.xapps.apps.foodiex.views.custom.AboutReference
                        android:id="@+id/btn_link_toasty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ar_icon="@drawable/ic_toasty"
                        app:ar_link="@string/toasty_url"
                        app:ar_text="@string/toasty" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/about_section_item_space" />

                    <org.xapps.apps.foodiex.views.custom.AboutReference
                        android:id="@+id/btn_link_timber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ar_link="@string/timber_url"
                        app:ar_text="@string/timber" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.motion.widget.MotionLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>