<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/fragment_splash">

    <fragment
        android:id="@+id/fragment_splash"
        android:name="org.xapps.apps.foodiex.views.splash.SplashFragment"
        android:label="@string/empty"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_fragment_splash_to_fragment_home"
            app:destination="@id/fragment_home"
            app:popUpTo="@id/navigation_main"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/fragment_home"
        android:name="org.xapps.apps.foodiex.views.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_fragment_home_to_fragment_about"
            app:destination="@id/fragment_about" />
        <action
            android:id="@+id/action_fragment_home_to_fragment_search"
            app:destination="@id/fragment_search" />
        <action
            android:id="@+id/action_fragment_home_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/fragment_about"
        android:name="org.xapps.apps.foodiex.views.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <dialog
        android:id="@+id/fragment_search"
        android:name="org.xapps.apps.foodiex.views.home.search.SearchBottomSheetFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="org.xapps.apps.foodiex.views.details.DetailsFragment"
        android:label="fragment_details"
        tools:layout="@layout/fragment_details" />

</navigation>