<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.home.board.BoardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_secondary">

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progressbar"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="@dimen/progressbar_height"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:mpb_progressStyle="horizontal"
            app:mpb_useIntrinsicPadding="false"
            tools:visibility="visible" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/history"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_history"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingHorizontal="@dimen/padding_small"
                    android:visibility="gone"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_history"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/txv_popular_drinks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/popular_drinks"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular_drinks"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingHorizontal="@dimen/padding_small"
                    android:visibility="gone"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_popular_drink"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/txv_popular_meals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/popular_meals"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular_meals"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingHorizontal="@dimen/padding_small"
                    android:visibility="gone"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_popular_meal"
                    tools:visibility="visible" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <org.xapps.apps.foodiex.views.custom.EmptyView
            android:id="@+id/ev_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:ev_icon="@drawable/ic_alert_circle_outline"
            app:ev_description="@string/loading_board"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>